# Set library name
set(LIBNAME DiKErnel.FunctionLibrary)

# Set folder names
set(PUBLIC_FOLDER Public)
set(PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER ${PUBLIC_FOLDER}/AsphaltRevetmentWaveImpact)
set(PUBLIC_GRASS_REVETMENT_WAVE_IMPACT_FOLDER ${PUBLIC_FOLDER}/GrassRevetmentWaveImpact)
set(PUBLIC_GRASS_REVETMENT_WAVE_RUNUP_FOLDER ${PUBLIC_FOLDER}/GrassRevetmentWaveRunup)
set(PUBLIC_NATURAL_STONE_REVETMENT_FOLDER ${PUBLIC_FOLDER}/NaturalStoneRevetment)

# Define sources
set(SOURCEFILES_PUBLIC
  ${PUBLIC_FOLDER}/GenericFunctions.cpp
  ${PUBLIC_FOLDER}/GenericFunctions.h
  ${PUBLIC_FOLDER}/HydraulicLoadFunctions.cpp
  ${PUBLIC_FOLDER}/HydraulicLoadFunctions.h
  ${PUBLIC_FOLDER}/RevetmentFunctions.cpp
  ${PUBLIC_FOLDER}/RevetmentFunctions.h
)

set(SOURCEFILES_PUBLIC_ASPHALT_REVETMENT_WAVE_IMPACT
  ${PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactFunctions.cpp
  ${PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactFunctions.h
  ${PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactFunctionsCalculatedInput.cpp
  ${PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactFunctionsCalculatedInput.h
  ${PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactFunctionsInput.cpp
  ${PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactFunctionsInput.h
)

set(SOURCEFILES_PUBLIC_GRASS_REVETMENT_WAVE_IMPACT
  ${PUBLIC_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactFunctions.cpp
  ${PUBLIC_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactFunctions.h
)

set(SOURCEFILES_PUBLIC_GRASS_REVETMENT_WAVE_RUNUP
  ${PUBLIC_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupFunctions.cpp
  ${PUBLIC_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupFunctions.h
  ${PUBLIC_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighFunctions.cpp
  ${PUBLIC_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighFunctions.h
)

set(SOURCEFILES_PUBLIC_NATURAL_STONE_REVETMENT
  ${PUBLIC_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentFunctions.cpp
  ${PUBLIC_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentFunctions.h
)

# Add library
add_library(${LIBNAME} STATIC
  ${SOURCEFILES_PUBLIC}
  ${SOURCEFILES_PUBLIC_ASPHALT_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_PUBLIC_GRASS_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_PUBLIC_GRASS_REVETMENT_WAVE_RUNUP}
  ${SOURCEFILES_PUBLIC_NATURAL_STONE_REVETMENT}
)

# Configure folder structure
set_target_properties(${LIBNAME} PROPERTIES FOLDER Src)
source_group(${PUBLIC_FOLDER} FILES ${SOURCEFILES_PUBLIC})
source_group(${PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_PUBLIC_ASPHALT_REVETMENT_WAVE_IMPACT})
source_group(${PUBLIC_GRASS_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_PUBLIC_GRASS_REVETMENT_WAVE_IMPACT})
source_group(${PUBLIC_GRASS_REVETMENT_WAVE_RUNUP_FOLDER} FILES ${SOURCEFILES_PUBLIC_GRASS_REVETMENT_WAVE_RUNUP})
source_group(${PUBLIC_NATURAL_STONE_REVETMENT_FOLDER} FILES ${SOURCEFILES_PUBLIC_NATURAL_STONE_REVETMENT})

# Expose header files
target_include_directories(${LIBNAME} PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_ASPHALT_WAVE_IMPACT_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_NATURAL_STONE_REVETMENT_FOLDER}
)